# uv-git-debug-c

./: README.md  pyproject.toml
src/uv_git_debug_c/: __init__.py
