[project]
name = "uv-git-debug-c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uv-git-debug-a",
    "uv-git-debug-b",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
uv-git-debug-b = { git = "https://github.com/kubotty/uv-git-debug-b.git", tag = "0.1.0" }
uv-git-debug-a = { git = "https://github.com/kubotty/uv-git-debug-a.git", tag = "0.1.0" }
